<resources>
    <string name="app_name">Github User</string>
    <string name="detail_page_title">Github User</string>
    <string name="username">username</string>
    <string name="search">Search</string>
    <string name="search_hint">Cari user GitHub di sini</string>
    <string name="name">Name</string>
    <string name="login">login</string>
    <string name="followers">xx</string>
    <string name="followers_txt">Followers</string>
    <string name="following">xx</string>
    <string name="following_txt">Following</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="content_tab_followers">List Followers</string>
    <string name="content_tab_following">List Following</string>
    <string name="setting">Setting</string>
    <string name="dark_mode">Dark Mode</string>

</resources>